--- a/Imobiliaria/src/Visao/ReabilitarVenda.form
+++ b/Imobiliaria/src/Visao/ReabilitarVenda.form
@@ -110,6 +110,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbNumeroItemStateChanged"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
