--- a/Imobiliaria/src/Visao/RelatorioImovel.form
+++ b/Imobiliaria/src/Visao/RelatorioImovel.form
@@ -45,7 +45,7 @@
               <Component id="jpAgrupador" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jpControles" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="45" max="32767" attributes="0"/>
+              <EmptySpace pref="60" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -69,7 +69,7 @@
                       <Group type="102" attributes="0">
                           <Component id="jpLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jpTextFields" max="32767" attributes="0"/>
+                          <Component id="jpTextFields" pref="190" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jpVendido" min="-2" max="-2" attributes="0"/>
