--- a/trunk/Imobiliaria/src/Visao/NovoUsuario.form
+++ b/trunk/Imobiliaria/src/Visao/NovoUsuario.form
@@ -121,7 +121,13 @@
             <Property name="rows" type="int" value="2"/>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="jtfNomeUsuario">
+            <Component class="javax.swing.JComboBox" name="jcbNomeUsuario">
+              <Properties>
+                <Property name="editable" type="boolean" value="true"/>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="0"/>
+                </Property>
+              </Properties>
             </Component>
             <Component class="javax.swing.JPasswordField" name="jpfSenhaUsuario">
             </Component>
@@ -209,6 +215,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbPessoaItemStateChanged"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
