--- a/Imobiliaria/src/Visao/NovoUsuario.form
+++ b/Imobiliaria/src/Visao/NovoUsuario.form
@@ -128,6 +128,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbNomeUsuarioItemStateChanged"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="jpfSenhaUsuario">
             </Component>
