--- a/TCC/src/visao/CadastroFornecedor.form
+++ b/TCC/src/visao/CadastroFornecedor.form
@@ -117,10 +117,14 @@
             </Component>
             <Component class="javax.swing.JComboBox" name="jcbFornecedorCNPJ">
               <Properties>
+                <Property name="editable" type="boolean" value="true"/>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbFornecedorCNPJItemStateChanged"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
