implementação de titulos a pagar

--- a/TCC/src/visao/FinanceiroNotaCompra.form
+++ b/TCC/src/visao/FinanceiroNotaCompra.form
@@ -123,7 +123,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="74" max="32767" attributes="0"/>
+                      <EmptySpace pref="79" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -232,10 +232,7 @@
                                   <Component id="jtfQuantidade" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jbBuscarFornecedor" alignment="1" min="-2" pref="32" max="-2" attributes="0"/>
-                                  <Component id="jbBuscarProduto" alignment="1" min="-2" pref="32" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="jbBuscarFornecedor" min="-2" pref="32" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -249,10 +246,7 @@
                                   <Component id="jbBuscarFornecedor" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jcbProduto" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jbBuscarProduto" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="jcbProduto" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jtfValor" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -276,6 +270,9 @@
                           <StringArray count="0"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbProdutoItemStateChanged"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JTextField" name="jtfValor">
                     </Component>
@@ -290,17 +287,6 @@
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBuscarFornecedorActionPerformed"/>
-                      </Events>
-                    </Component>
-                    <Component class="javax.swing.JButton" name="jbBuscarProduto">
-                      <Properties>
-                        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/ico/search_16x16.png"/>
-                        </Property>
-                        <Property name="toolTipText" type="java.lang.String" value="Buscar Produto"/>
-                      </Properties>
-                      <Events>
-                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBuscarProdutoActionPerformed"/>
                       </Events>
                     </Component>
                   </SubComponents>
