--- a/TCC/src/visao/Login.form
+++ b/TCC/src/visao/Login.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Mart Manager"/>
+    <Property name="title" type="java.lang.String" value="TCC - Bruno"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -38,7 +38,7 @@
                       <Component id="jPanel3" min="-2" pref="146" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbLogin" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jbExit" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -60,7 +60,7 @@
                       <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jbLogin" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jbExit" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -145,6 +145,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="jpfPass">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jpfPassKeyPressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -183,10 +186,13 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="jbLogin">
       <Properties>
         <Property name="text" type="java.lang.String" value="Login"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbLoginActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbExit">
       <Properties>
